# w255-finalproject

./: Dockerfile  README.md  load.js  namespace.yaml  pyproject.toml  run_cloud.sh
distilbert-base-uncased-finetuned-sst2/: README.md  config.json
labs/final_project/mlapi/: pyproject.toml
labs/lab_1/: README.md  run_script_base.sh
labs/lab_1/solution/lab1/: Dockerfile  pyproject.toml
labs/lab_1/solution/lab1/tests/: test_lab1.py
labs/lab_2/: README.md
labs/lab_2/solution/lab2/: pyproject.toml
labs/lab_2/solution/lab2/src/: main.py
labs/lab_2/solution/lab2/tests/: test_predict.py
labs/lab_2/trainer/: pyproject.toml
labs/lab_3/: README.md
labs/lab_3/solution/: run.sh
labs/lab_3/solution/lab3/: Dockerfile  docker-compose.yml  pyproject.toml
labs/lab_3/solution/lab3/src/: main.py
labs/lab_3/solution/lab3/tests/: test_predict.py
labs/lab_3/solution/lab3/yamls/: config_map.yaml  deployment-lab3.yaml  deployment-redis.yaml
labs/lab_4/: README.md
labs/lab_5/: README.md  load.js
src/: example.py  main.py
tests/: test_mlapi.py
workflows/: tests_project.yml
