[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["James Winegar <jameswine@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
transformers = "^4.29.1"
torch = "2.0.1"
scipy = "^1.11"
scikit-learn = "^1.3.0"
datasets = "^2.14"
requests = "^2.31"
fastapi-cache2 = {extras = ["redis"], version = "^0.1.9"}
fastapi = "^0.99"
uvicorn = "^0.23"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
isort = "^5.12"
black = "^23.7"
pre-commit = "^3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
