[tool.poetry]
name = "lab1"
version = "0.1.0"
description = ""
authors = ["James Winegar <jameswine@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
requests = "^2.30.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3"
black = "^23.3.0"
isort = "^5.12.0"
httpx = "^0.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
