[tool.poetry]
name = "lab3"
version = "0.3.0"
description = ""
authors = ["James Winegar <jameswine@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.99.0"
uvicorn = "^0.22"
joblib = "^1.3"
scipy = "^1.11"
scikit-learn = "1.3.0"
requests = "^2.31"
fastapi-cache2 = {extras = ["redis"], version = "^0.1.9"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
isort = "^5.12.0"
black = "^23.3"
pre-commit = "^3.3.1"
httpx = "^0.24.0"
ruff = "^0.0.275"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
